Changelog
=========

5.0.0b4 (unreleased)
--------------------

- Nothing changed yet.


5.0.0b3 (2023-11-13)
--------------------

- Fix ck_ruid_to_url transform for tags with style and url()
  [gotcha]


5.0.0b2 (2023-06-23)
--------------------

- Fix interaction with formunload pattern.
  [gotcha]


5.0.0b1 (2023-04-13)
--------------------

- Fix warning with @@ckeditor_vars.js (text/plain MIME type)
  [gotcha]

- Hide plone.app.textfield text format select.
  [gotcha]

- Reset forcePasteAsPlainText default to false.
  [gotcha]

- Fix integration with pattern validation.
  [gotcha]

- Polish upgrade to registry.
  [gotcha]


5.0.0a5 (2023-03-27)
--------------------

- Fix availability of cke-save
  [gbastien, gotcha]

- Fix leftover usage of ``portal_properties``.
  [gotcha]

- Fix cke-upload-image URL setup
  [gbastien, gotcha]

- Update to CKEditor 4.20.2
  [gotcha]

- Fix saving static portlet
  [gotcha]


5.0.0a4 (2023-02-20)
--------------------

- add Plone Addon classifier
  [MrTango]


5.0.0a3 (2023-02-20)
--------------------

- Fix all tests for 5.2 and 6 and run them on GHA
  [gotcha]

- Fix CKEditor in rich text field in modal dialog
  [gotcha]


5.0.0a2 (2022-12-12)
--------------------

- Fix brown bag release.
  [gotcha]


5.0.0a1 (2022-12-12)
--------------------

- Plone 5.2 and Plone 6 support.
  [aduchene, gotcha, spereverde, Mychae1]

- Migrate configuration from ``portal_properties`` to registry.
  [aduchene, gotcha, kimpaulissen, Mychae1]

- Fix robot tests.
  [aduchene]


4.10.1 (2021-10-01)
-------------------

- Fix CKEditor not packaged properly in 4.10.0 release.
  [aduchene]

- Use zest.releaser = 6.22.1.
  [aduchene]


4.10.0 (2021-06-11)
-------------------

- Add disallowedContent option to blacklist content.
  [naro, gotcha]


4.9.1 (2021-02-12)
------------------

- Add Transifex.net service integration to manage the translation process.
  [macagua]

- Add Spanish translation
  [macagua]
